# fastapi-template

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
tests/: test_hello_world.py
