[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Guilherme Munarolo <guimunarolo@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-randomly = "^3.11.0"
black = "^22.3.0"
isort = "^5.10.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-sxvv"
testpaths = [
    "tests",
]

[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section="THIRDPARTY"
